--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,10 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\NGO VAN HAI\\OneDrive\\Documents\\NetBeansProjects\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\NGO VAN HAI\\OneDrive\\Documents\\NetBeansProjects\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.jaxb-api-2.1.jar=C:\\Users\\NGO VAN HAI\\OneDrive\\Documents\\NetBeansProjects\\lib\\jaxb-api-2.1.jar
-file.reference.sqljdbc42.jar=C:\\Users\\NGO VAN HAI\\OneDrive\\Documents\\NetBeansProjects\\lib\\sqljdbc42.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\NGO VAN HAI\\Downloads\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\NGO VAN HAI\\Downloads\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jaxb-api-2.1.jar=C:\\Users\\NGO VAN HAI\\Downloads\\lib\\jaxb-api-2.1.jar
+file.reference.sqljdbc42.jar=C:\\Users\\NGO VAN HAI\\Downloads\\lib\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
